# agent-memory-lab

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
environment/: build_env.py
experiments/results/: analysis_summary.txt  exposure_report.txt
experiments/results/calibration_ollama_qwen2.5-3b_seed0_n5/: scores.csv  transcripts.jsonl
experiments/results/full_anthropic_claude-sonnet-5_seed0/: scores.csv  transcripts.jsonl
experiments/results/full_anthropic_claude-sonnet-5_seed1/: scores.csv  transcripts.jsonl
experiments/results/full_anthropic_claude-sonnet-5_seed2/: scores.csv  transcripts.jsonl
experiments/results/none_anthropic_claude-sonnet-5_seed0/: scores.csv  transcripts.jsonl
experiments/results/none_anthropic_claude-sonnet-5_seed1/: scores.csv  transcripts.jsonl
experiments/results/none_anthropic_claude-sonnet-5_seed2/: scores.csv  transcripts.jsonl
experiments/results/none_ollama_qwen2.5-3b_seed0/: scores.csv  transcripts.jsonl
experiments/results/rag_anthropic_claude-sonnet-5_seed0/: scores.csv  transcripts.jsonl
experiments/results/rag_anthropic_claude-sonnet-5_seed1/: scores.csv  (+1 more)
scripts/: analyze.py  context_report.py  exposure_report.py
src/: agent.py  calibrate.py  judge.py  llm.py  run.py  stats.py
src/memory/: base.py  full.py  none.py  rag.py  summary.py
tasks/: calibration.yaml  generate.py  generate_calibration.py  tasks.yaml
tests/: test_agent.py  test_build_env.py  test_calibrate.py  test_generate_calibration.py  test_generate_tasks.py  test_judge.py  test_llm.py  test_memory_strategies.py  test_stats.py
(+8 files in other folders)
