[project]
name = "agent-memory-lab"
version = "0.1.0"
description = "Does agent memory help or hurt? Four memory strategies measured across 30 sequential sessions with dependent, independent, and trap tasks."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
]

[project.optional-dependencies]
# Not a base dependency on purpose: reproduce.sh promises a key-free,
# local-only path (Ollama). Install with `uv sync --extra frontier` only
# when actually running the Claude Sonnet verification arm.
frontier = ["anthropic>=0.40"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
